--- a/app/assets/stylesheets/partials/_profile_modal.sass
+++ b/app/assets/stylesheets/partials/_profile_modal.sass
@@ -27,6 +27,7 @@
                     text-align: left
                     h1
                         margin-top: 0
+                        padding-bottom: 1rem
                         color: #424242
                         font-size: 20px
                     a
